Implement async store switch tasks

--- a/playbooks/tasks/snow_attach_store_diagnostic_report/store_switch.yml
+++ b/playbooks/tasks/snow_attach_store_diagnostic_report/store_switch.yml
@@ -1,5 +1,5 @@
 ---
-- name: Create ios-cli configuration file
+- name: Store Switch | Create ios-cli configuration file
   ansible.builtin.copy:
     dest: /home/runner/.ios-cli.yml
     content: |
@@ -7,6 +7,7 @@
       user: "{{ ansible_user }}"
       password: "{{ ansible_ssh_pass }}"
   no_log: true
+  when: "'/home/runner/.ios-cli.yml' is not file"
 
 - name: Store Switch | Fetch name server configuration
   ansible.builtin.command: >
@@ -15,9 +16,11 @@
       --expect-timeout 60
       --command "show running-config | include ip name-server 10.10.10.10"
       {{ store_switch }}
-  register: name_server
+  register: name_server_job
   changed_when: false
   ignore_errors: true
+  async: 60
+  poll: 0
 
 - name: Store Switch | Fetch domain lookup configuration
   ansible.builtin.command: >
@@ -26,9 +29,27 @@
       --expect-timeout 60
       --command "show running-config | include no ip domain-lookup"
       {{ store_switch }}
-  register: domain_lookup
+  register: domain_lookup_job
   changed_when: false
   ignore_errors: true
+  async: 60
+  poll: 0
+
+- name: Store Switch | Wait for async jobs to finish
+  ansible.builtin.async_status:
+    jid: "{{ job.ansible_job_id }}"
+  register: jobs
+  until: jobs.finished
+  retries: 60
+  delay: 1
+  loop: "{{ [name_server_job, domain_lookup_job] }}"
+  loop_control:
+    loop_var: job
+
+- name: Store Switch | Set DNS configuration facts
+  ansible.builtin.set_fact:
+    name_server: "{{ jobs.results[0] }}"
+    domain_lookup: "{{ jobs.results[1] }}"
 
 - name: Store Switch | Enable DNS lookups
   ansible.builtin.command: >
@@ -51,9 +72,11 @@
       --expect-timeout 60
       --command "show version | include uptime"
       {{ store_switch }}
-  register: store_switch_uptime
+  register: store_switch_uptime_job
   changed_when: false
   ignore_errors: true
+  async: 60
+  poll: 0
 
 - name: Store Switch | Trace route to the internet
   ansible.builtin.command: >
@@ -62,9 +85,11 @@
       --expect-timeout 60
       --command "traceroute 8.8.8.8"
       {{ store_switch }}
-  register: store_internet_egress
+  register: store_internet_egress_job
   changed_when: false
   ignore_errors: true
+  async: 60
+  poll: 0
 
 - name: Store Switch | Test DNS resolution
   ansible.builtin.command: >
@@ -73,9 +98,28 @@
       --expect-timeout 60
       --command "ping {{ verifone_fqdn }} repeat 1"
       {{ store_switch }}
-  register: store_switch_dns_test
+  register: store_switch_dns_test_job
   changed_when: false
   ignore_errors: true
+  async: 60
+  poll: 0
+
+- name: Store Switch | Wait for async jobs to finish
+  ansible.builtin.async_status:
+    jid: "{{ job.ansible_job_id }}"
+  register: jobs
+  until: jobs.finished
+  retries: 60
+  delay: 1
+  loop: "{{ [store_switch_uptime_job, store_internet_egress_job, store_switch_dns_test_job] }}"
+  loop_control:
+    loop_var: job
+
+- name: Store Switch | Set store facts
+  ansible.builtin.set_fact:
+    store_switch_uptime: "{{ jobs.results[0] }}"
+    store_internet_egress: "{{ jobs.results[1] }}"
+    store_switch_dns_test: "{{ jobs.results[2] }}"
 
 - name: Store Switch | Set verifone_ip fact
   ansible.builtin.set_fact:
@@ -88,9 +132,11 @@
       --expect-timeout 60
       --command "connect www.williams-sonoma.com 443"
       {{ store_switch }}
-  register: store_switch_connect_ws_site
+  register: store_switch_connect_ws_site_job
   changed_when: false
   ignore_errors: true
+  async: 60
+  poll: 0
 
 - name: Store Switch | Connect to Store Wide Web site
   ansible.builtin.command: >
@@ -99,9 +145,11 @@
       --expect-timeout 60
       --command "connect {{ storesweb_fqdn }} 443"
       {{ store_switch }}
-  register: store_switch_connect_storesweb
+  register: store_switch_connect_storesweb_job
   changed_when: false
   ignore_errors: true
+  async: 60
+  poll: 0
 
 - name: Store Switch | Connect to Verifone API
   ansible.builtin.command: >
@@ -110,6 +158,25 @@
       --expect-timeout 60
       --command "connect {{ verifone_fqdn }} 443"
       {{ store_switch }}
-  register: store_switch_connect_verifone
+  register: store_switch_connect_verifone_job
   changed_when: false
   ignore_errors: true
+  async: 60
+  poll: 0
+
+- name: Store Switch | Wait for async jobs to finish
+  ansible.builtin.async_status:
+    jid: "{{ job.ansible_job_id }}"
+  register: jobs
+  until: jobs.finished
+  retries: 60
+  delay: 1
+  loop: "{{ [store_switch_connect_ws_site_job, store_switch_connect_storesweb_job, store_switch_connect_verifone_job] }}"
+  loop_control:
+    loop_var: job
+
+- name: Store Switch | Set store facts
+  ansible.builtin.set_fact:
+    store_switch_connect_ws_site: "{{ jobs.results[0] }}"
+    store_switch_connect_storesweb: "{{ jobs.results[1] }}"
+    store_switch_connect_verifone: "{{ jobs.results[2] }}"
