--- a/playbooks/tasks/snow_attach_store_diagnostic_report/mist.yml
+++ b/playbooks/tasks/snow_attach_store_diagnostic_report/mist.yml
@@ -58,6 +58,7 @@
       until: jobs.finished
       retries: 30
       delay: 1
+      ignore_errors: true
       loop: "{{ [mist_site_stats_job, mist_client_stats_job, mist_wlans_job] }}"
       loop_control:
         loop_var: job
